add audio and href with dot

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="./main.html">Main</a>
+  <audio controls src="./audio/scatman.mp3" autoplay></audio>
 </body>
 
 </html>
