remove audio controls

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <audio controls src="./audio/scatman.mp3" autoplay></audio>
+  <audio src="./audio/scatman.mp3" autoplay></audio>
 </body>
 
 </html>
