--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+  </style>
+
 </head>
 
 <body>
-  <a href="./main.html">Main</a>
+  <p>Переход по ссылке <a href="./main.html">"./main.html"</a>
+  </p>
+  <button class="js-audio-button">Play Audio</button>
+  <audio class="js-audio" src="./audio/scatman.mp3"></audio>
+  <script>
+    let audioButton = document.querySelector('.js-audio-button')
+
+    audioButton.addEventListener('click', () => {
+      let audio = document.querySelector('.js-audio')
+      if (audio.paused) {
+        audio.play()
+        audioButton.innerHTML = 'Stop Audio'
+      }
+      else {
+        audio.pause()
+        audioButton.innerHTML = 'Start Audio'
+      }
+    })
+  </script>
 </body>
 
 </html>
